--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     background-size: cover;
     background-position: center;
     font-family: 'Arial', sans-serif;
-    margin-top: 60px; /* Adjust the top margin to make room for the fixed navigation bar */
+    overflow-x: hidden; /* Hide the horizontal scrollbar */
 }
 
 header {
@@ -34,4 +34,5 @@ section {
     text-align: center;
     padding: 70px 20px; /* Adjust the top padding to make room for the fixed navigation bar */
     color: #333; /* Adjust the color of your content text */
+    margin-top: 60px; /* Adjust the top margin to move the content up */
 }
